--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
 Pods/
+.DS_Store
+
+RxMvvmChuLe.xcodeproj/xcuserdata/jaxun.xcuserdatad/xcschemes/
+
+*.xcuserstate
